Archive2/ab/c88b62f0f10754/output
main.cpp:11:23: error: no member named 'put_time' in namespace 'std'
              << std::put_time(std::localtime(&now_c), "%F %T") << '\n';
                 ~~~~~^
1 error generated.
